--- a/templates/category/worker_cvs.html
+++ b/templates/category/worker_cvs.html
@@ -18,23 +18,31 @@
                 <h3>{{ work.user.email }}</h3>
                 <img src="{{ work.image.url }}" style="width:125px; height:125px;" alt="Card image cap">
             {% endfor %} {% endcomment %}
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+            <h1> All applyed CV's for {{ subcat }}</h1>
+            <br>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                {% for c in cv %}
+                    <div class="col">
+                        <a style="text-decoration: none; color:black; font-weight:50" href="{% url 'cv_detail' c.id %}">
 
-<div class="row row-cols-1 row-cols-md-3 g-4">
-{% for c in cv %}
-    <div class="col">
-        <a href="{% url 'cv_detail' c.id %}">
-
-            <div class="card h-100">
-                
-                <div class="card-body">
-                    <h5 class="card-title">{{ c.worker.last_name }}</h5>
-                    <p class="card-text">{{ c.worker.first_name }}</p>
-                </div>
+                            <div class="card h-100"style="text-align:center;">
+                                <div class="card-image">
+                                    <img style="width:150px; height:auto;" src="/media/default.jpeg">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">{{ c.worker.last_name }}</h5>
+                                    <p class="card-text">{{ c.worker.first_name }}</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                {% endfor %}
             </div>
-        </a>
+        </div>
     </div>
-{% endfor %}
-<img src="{{ workers.img.url }}">
 </div>
 
 {% endblock content %}
