--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -12,6 +13,21 @@
     {% block headers %}{% endblock headers %}
   </head>
   <body class="body display-flex">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-2 col-md-4 col-sm-12">
+          {% get_current_language as LANGUAGE_CODE %}
+          {% get_available_languages as LANGUAGES %}
+          {% get_language_info_list for LANGUAGES as languages %}
+          {% for lang in languages %}
+            <li>
+              <a class="dropdown-item nav-link" href="/{{ lang.code }}/">{{ lang.name_local }}</a>
+            </li>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+
     {% include "nav.html" %}
 
     {% block content %}
