--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 {% load static %}
 {% block headers %}
 <link rel="stylesheet" href="{% static 'css/home.css' %}">
@@ -12,7 +13,7 @@
         <div class="main-header">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <h1 class="font-weight-light display-2"><span class="headerone">Germany Arbite</span></h1>
-                <h3 class="font-weight-light display-5"><span class="headerone">We are a liders in Humanresources. We provide best services for all employees and employers</span></h3>
+                <h3 class="font-weight-light display-5"><span class="headerone">{% trans "We are a liders in Humanresources. We provide best services for all employees and employers" %}</span></h3>
 
             </div>
         </div>
