--- a/templates/nav.html
+++ b/templates/nav.html
@@ -8,18 +8,21 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'category' 1 %}">Category</a>
+        <a class="nav-link" href="{% url 'category' 1 %}">Job-Positions</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">News</a>
+        <a class="nav-link" href="{% url 'news' %}">News</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'faq' %}">FAQ</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Contact</a>
       </li>
     </ul>
-    <ul class="navbar-nav ml-auto">
+    <ul class="navbar-nav">
       {% if user.is_authenticated %}
       <li class="nav-item">
         <a class="nav-link" href="{% url 'profile' %}">{{ user.username }}</a>
